Add commands to Phpactor COC extension

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
                 "phpactor.enable": {
                     "type": "boolean",
                     "default": true,
-                    "description": "is enable php lsp"
+                    "description": "enable phpactor language server"
                 }
             }
         }
