--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
                     "description": "enable phpactor language server"
                 },
                 "phpactor.config": {
-                    "type": "any",
+                    "type": "object",
                     "default": {},
                     "description": "standard phpactor configuration"
                 }
